# MriWatcher

./: CMakeLists.txt  ImageFrameGUI.ui  ImageFrameGUIControls.cxx  ImageFrameGUIControls.h  ImageManagerFloat.h  ImageManagerFloat.txx  MacOSXBundleInfo.plist.in  MriWatcher.cxx  MriWatcher.pro  MriWatcher.rc  MriWatcherConfig.h  MriWatcherFlow.cxx  MriWatcherFlow.h  MriWatcherFrame.cxx  MriWatcherFrame.h  MriWatcherGUI.ui  MriWatcherGUIControls.cxx  MriWatcherGUIControls.h  MriWatcherHelpGUI.ui  QtWindow2DFloat.cxx  QtWindow2DFloat.h  README  README.md  ReleaseNotes  icon.qrc  imageframeform.ui  imageframegui.cpp  imageframegui.h  imageframelayout.cpp  imageframelayout.h  imagemanagerfloat.cpp  imagemanagerfloat.h  main.cpp  mriwatcherapp.cpp  mriwatcherapp.h  mriwatcherform.ui  mriwatcherframe.cpp  mriwatcherframe.h  mriwatchergui.cpp  mriwatchergui.h  (+2 more)
CMake/: glutSetup.cmake
Libraries/Display/Common/: ImageManager.h  ImageManager.txx  Palette.h
Libraries/Display/Window2D/: NeuroLibOpenGLSliceTexture.h  NeuroLibOpenGLSliceTexture.txx  QtWindow2D.cxx  QtWindow2D.h
Libraries/IO/Common/: ItkFastIO.h  ItkFastIO.txx
Libraries/IO/Qt/: QtImageLoader.h  QtImageLoader.txx
images/: icons.icns
